# bgep

./: .actrc  .gitignore  Cargo.toml  README.md  config.yaml  config_fr.yaml  old_config.yaml
.github/workflows/: rust.yml
scripts/: check.sh
src/: config.rs  embeddings_store.rs  json_processor.rs  lib.rs  main.rs  matcher.rs  schema.rs
test_data/json_inputs/: simple.json
tests/: parameter_extractor_tests.rs
